#Task: #4: Clean up dto creation and refactor data creation methods and mappers